allow overflow fix issue

--- a/src/app/[lang]/nouns/dreams/create/_styles/content.module.css
+++ b/src/app/[lang]/nouns/dreams/create/_styles/content.module.css
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 1280px) {
     .container {
-        height: calc(100vh - (var(--header-height) + 32px));
+        min-height: calc(100vh - (var(--header-height) + 32px));
         overflow: hidden;
         display: grid;
         grid-template-columns: repeat(5, minmax(0, 1fr));
