--- a/src/app/_styles/combobox/combobox.module.css
+++ b/src/app/_styles/combobox/combobox.module.css
@@ -80,6 +80,7 @@
     padding-top: 0.25rem;
     border: 1px solid #d5d7e1;
     box-shadow: 0px 4px 16.5px 4px rgba(0, 0, 0, 0.1);
+    overscroll-behavior: contain;
 }
 
 .option {
